a1/brendan_gordon/TEST_PROGRAMS/invalidtype/jonathan_campbell/3.min
var x: int;
var y: float;
var x: string;
